# libbr

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  README.md  libbr.hpp  travis.sh
libbr/: CMakeLists.txt  algorithm.hpp  algorithms.hpp  assert.hpp  atomics.hpp  config.hpp  container.hpp  containers.hpp  exception.hpp  exceptions.hpp  functional.hpp  iterator.hpp  iterators.hpp  libbr.hpp  math.hpp  memory.hpp  operators.hpp  optional.hpp  random.hpp  string.hpp  strings.hpp  type_operate.hpp  type_traits.hpp  type_transform.hpp  typedef.hpp  types.hpp  utility.hpp
libbr/algorithm/: accumulate.hpp  adjacent_find.hpp  algorithm.cpp  all_of.hpp  any_of.hpp  binary_search.hpp  clamp.hpp  copy.hpp  copy_backward.hpp  copy_if.hpp  copy_n.hpp  copy_while.hpp  count.hpp  count_if.hpp  each.hpp  each_n.hpp  equal.hpp  equal_range.hpp  fill.hpp  fill_n.hpp  find.hpp  find_end.hpp  find_first_of.hpp  find_if.hpp  find_if_not.hpp  generate.hpp  generate_n.hpp  heap_build.hpp  heap_pop.hpp  heap_push.hpp  heap_sort.hpp  is_heap.hpp  is_heap_until.hpp  is_partitioned.hpp  is_permutation.hpp  is_sorted.hpp  is_sorted_until.hpp  lexicographical_compare.hpp  lower_bound.hpp  max.hpp  (+52 more)
libbr/algorithms/: algorithm.cpp  all_of.hpp  any_of.hpp  copy.hpp  copy_backward.hpp  copy_if.hpp  copy_n.hpp  count.hpp  count_if.hpp  each.hpp  each_n.hpp  fill.hpp  fill_n.hpp  find.hpp  find_adjacent.hpp  find_if.hpp  find_in.hpp  find_unless.hpp  generate.hpp  generate_n.hpp  is_partitioned.hpp  is_sorted.hpp  max.hpp  max_element.hpp  maxmin.hpp  maxmin_element.hpp  merge.hpp  min.hpp  min_element.hpp  minmax.hpp  minmax_element.hpp  move.hpp  move_backward.hpp  none_of.hpp  partition.hpp  partition_point.hpp  partition_stably.hpp  remove.hpp  remove_copy.hpp  remove_copy_if.hpp  (+18 more)
libbr/assert/: assert.cpp  assert.hpp  assert_type_completeness.hpp  dummy_false.hpp  dummy_true.hpp  type_is_complete.hpp
libbr/atomics/: memory_order.hpp
libbr/config/: arch.hpp  compiler.hpp  config.hpp  constants.hpp  detail.hpp  macros.hpp  platform.hpp  types.hpp  user.hpp
libbr/container/: array.hpp  avl_tree.hpp  binary_tree.hpp  compressed_pair.hpp  container.cpp  container_traits.hpp  data.hpp  deque.hpp  dlist.hpp  dynamic_array.hpp  empty.hpp  fixed_array.hpp  forward_list.hpp  in_place_tag.hpp  initializer_list.hpp  is_empty.hpp  list.hpp  null_optional_tag.hpp  optional.hpp  optional_access_exception.hpp  pair.hpp  rb_tree.hpp  size.hpp  slist.hpp  splay_tree.hpp  split_buffer.hpp  tree_map.hpp  tree_multi_map.hpp  tree_multi_set.hpp  tree_set.hpp  tuple.hpp
libbr/containers/: initializer_list.hpp  pair.hpp
libbr/encoding/: ascii_encoding.hpp  encoding.hpp  gb18030_encoding.cpp  gb18030_encoding.hpp  invalid_code_point_exception.hpp  shift_jis_encoding.cpp  shift_jis_encoding.hpp  utf16_encoding.cpp  utf16_encoding.hpp  utf16_le_encoding.cpp  utf16_le_encoding.hpp  utf8_encoding.cpp  utf8_encoding.hpp
libbr/enumerate/: enumerable.hpp  enumerator.hpp
libbr/exception/: argument_exception.cpp  argument_exception.hpp  domain_exception.hpp  exception.cpp  exception.hpp  index_exception.hpp  index_out_of_range_exception.cpp  index_out_of_range_exception.hpp  invalid_argument_exception.cpp  invalid_argument_exception.hpp  length_exception.hpp  logic_exception.cpp  logic_exception.hpp  logical_exception.cpp  logical_exception.hpp  out_of_range_exception.cpp  out_of_range_exception.hpp  runtime_exception.cpp  runtime_exception.hpp  std_exception.hpp  throw.hpp
libbr/exceptions/: argument_exception.hpp  exception.hpp  exceptions.cpp  runtime_exception.hpp  stl.hpp
libbr/functional/: bad_call_exception.hpp  basic_functor.hpp  binary_functor.hpp  bind.hpp  bit_and.hpp  bit_lshift.hpp  bit_not.hpp  bit_or.hpp  bit_rshift.hpp  bit_xor.hpp  divide.hpp  equal.hpp  equal_to.hpp  function.hpp  functional.cpp  greater.hpp  greater_equal.hpp  invoke.hpp  less.hpp  less_equal.hpp  logical_and.hpp  logical_not.hpp  logical_or.hpp  member_pointer.hpp  minus.hpp  modulo.hpp  multiply.hpp  not_equal.hpp  plus.hpp  unary_functor.hpp  unary_minus.hpp  unary_plus.hpp  variadic_functor.hpp
libbr/iterator/: add_first_iterator.hpp  add_last_iterator.hpp  advance.hpp  basic_iterator.hpp  begin.hpp  category.hpp  cbegin.hpp  cend.hpp  crbegin.hpp  crend.hpp  distance.hpp  end.hpp  insert_back_iterator.hpp  insert_front_iterator.hpp  insert_iterator.hpp  iterator.hpp  iterator_range.hpp  iterator_traits.hpp  iterator_wrapper.hpp  move_iterator.hpp  next.hpp  prev.hpp  raw_storage_iterator.hpp  rbegin.hpp  rend.hpp  reverse_iterator.hpp
libbr/iterators/: advance.hpp  categories.hpp  distance.hpp  iterator_traits.hpp  next.hpp  prev.hpp  reverse_iterator.hpp
libbr/math/: abs.hpp  bignum.cpp  bignum.hpp  ceil.hpp  classify.hpp  common.hpp  complex.hpp  copy_sign.hpp  exp2.hpp  float.hpp  float_category.hpp  float_constants.hpp  float_environment.cpp  float_environment.hpp  floating_point.hpp  floor.hpp  gcd.hpp  infinity.hpp  is_finite.hpp  is_greater.hpp  is_greater_equal.hpp  is_infinite.hpp  is_less.hpp  is_less_equal.hpp  is_less_greater.hpp  is_nan.hpp  is_normal.hpp  is_unordered.hpp  log.hpp  log10.hpp  log2.hpp  make_infinity.hpp  make_nan.hpp  math.cpp  max.hpp  min.hpp  nan.hpp  range.hpp  relation.hpp  round.hpp  (+4 more)
libbr/memory/: address_of.hpp  alignment.hpp  allocator.hpp  allocator_argument_tag.hpp  allocator_construct.hpp  allocator_construct_backward.hpp  allocator_construct_forward.hpp  allocator_destroy.hpp  allocator_destructor.hpp  allocator_traits.hpp  bad_weak_pointer.cpp  bad_weak_pointer.hpp  checked_delete.hpp  construct.hpp  construct_at.hpp  construct_backward.hpp  construct_forward.hpp  default_construct_at.hpp  default_deleter.hpp  destroy.hpp  destroy_at.hpp  destroy_n.hpp  get_temporary_buffer.hpp  is_use_allocator.hpp  memory.cpp  memory_compare.hpp  memory_copy.hpp  memory_copy_unsafely.hpp  memory_fill.hpp  memory_move.hpp  memory_search.hpp  memory_set.hpp  new.cpp  new.hpp  pointer_traits.hpp  raw_storage_iterator.hpp  (+14 more)
test/: CMakeLists.txt  test.cpp  test.hpp
(+1024 files in other folders)
